--- a/jsbasic/bilguun/simpleArray/index.html
+++ b/jsbasic/bilguun/simpleArray/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple arrays</title>
+    <title>Simple arrays 2</title>
 </head>
 <body>
-    <h2></h2>
+    <h2>Simple Arrays 2</h2>
     <script src="./main.js"></script>
 </body>
 </html>
