--- a/jsbasic/gereltuya/twoarray/index.html
+++ b/jsbasic/gereltuya/twoarray/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Count Word</title>
+    <title>Array Multiply</title>
 </head>
 <body>
-    <h1>Count Word
+    <h1>Arrays *
     </h1>
     <p>Console to see more</p>
     <script src="./main.js"></script>
