--- a/jsbasic/orgil/tips/index.html
+++ b/jsbasic/orgil/tips/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h3>Tip 2</h3>
+    <h3>Array Sort</h3>
     <script src="./main.js"></script>
     <script src="./sortArray.js"></script>
 </body>
