aldaa shalgah heseg nemeh gej vzew

--- a/jsbasic/orgil/palindrom/index.html
+++ b/jsbasic/orgil/palindrom/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h3>Plaindrom check function</h3>
+    <div id="msg"></div>
     <script src="./main.js"></script>
   </body>
 </html>
