background color width change

--- a/jsbasic/gereltuya/changebg/index.html
+++ b/jsbasic/gereltuya/changebg/index.html
@@ -7,7 +7,9 @@
     <title>BG width Changer</title>
 </head>
 <body>
-    <div id="root"></div>
+    <div id="root">
+        <button type="text" id="myBtn"></button>
+    </div>
     <div id="bgRed"></div>
     <div id="bgOrange"></div>
     <script src="./app.js"></script>
