Aimaguudiin nerstei dom dasgal hiiw

--- a/jsbasic/oyunjargal/dom/index.html
+++ b/jsbasic/oyunjargal/dom/index.html
@@ -7,7 +7,7 @@
     <title>Aimag Dom Elements</title>
 </head>
 <body>
-    <h2>Aimag</h2>
+    <h2 class="title">Aimag</h2>
     <ul id="aimagNames">
 
         <li id="aimag-101">Архангай</li>
