--- a/jsbasic/gereltuya/dropdown/index.html
+++ b/jsbasic/gereltuya/dropdown/index.html
@@ -7,18 +7,21 @@
     <title>Drop Down list</title>
 </head>
 <body>
-    <h3>Drop down list</h3>
+    <h3>Colors dropdown list</h3>
     <br/>
 
     <form action="./index.html">
-        <select id="colorSelect">
-            <option value="red">Red</option>
+        <select id="selectItem" onchange="getSelectValue()">
+            <option value="red" selected>Red</option>
             <option value="green">Green</option>
             <option value="blue">Blue</option>
             <option value="white">White</option>
             <option value="black">Black</option>
+            <option value="pin">Pink</option>
+            <option value="coral">Coral</option>
+            <option value="silver">Silver</option>
         </select>
-        <input type="button" id="btn" value="Select and Remove">
+        <input type="button" id="btnDel" value="Select and Remove" onclick="deleteColor()">
     </form>
     <script src="./app.js"></script>
 </body>
