--- a/jsbasic/orgil/colorQuiz/index.html
+++ b/jsbasic/orgil/colorQuiz/index.html
@@ -7,9 +7,10 @@
     <title>Color Box Quiz</title>
 </head>
 <body>
-    <h3>Color Quiz</h3>
-
-
+    <div class="container">
+        <h3>Color Quiz</h3>
+        <div id="squares"></div>
+    </div>
     <script src="./app.js"></script>
 </body>
 </html>
