Color Quiz Game completed, Orgil teacher main code write

--- a/jsbasic/orgil/colorQuiz/index.html
+++ b/jsbasic/orgil/colorQuiz/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Color Box Quiz</title>
-</head>
-<body>
-    <div class="container">
-        <h3>Color Quiz</h3>
-        <div id="squares"></div>
-    </div>
+  </head>
+  <body>
+    <div>
+        Level: <span id="level"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Score: <span id="score"></span>
+    </div><br/>
+    <div class="root"></div>
     <script src="./app.js"></script>
-</body>
+  </body>
 </html>
