--- a/jsbasic/orgil/RandomNumber/index.html
+++ b/jsbasic/orgil/RandomNumber/index.html
@@ -11,13 +11,13 @@
     <header>
       <h1>Тоог таа!</h1>
       <p class="between">(1 ээс 20 хооронд)</p>
-      <button class="btn again">Шинээр эхлэх!</button>
+      <button id="startBtn" class="btn again" onclick="resetGame()">Шинээр эхлэх!</button>
       <div class="number">?</div>
     </header>
     <main>
       <section class="left">
-        <input type="number" class="guess" />
-        <button class="btn check">Шалгах!</button>
+        <input type="number" class="guess"/>
+        <button id="checkBtn" class="btn check" onclick="checkNumber()">Шалгах!</button>
       </section>
       <section class="right">
         <p class="message">Тааж эхлээрэй...</p>
