--- a/jsbasic/mungunshagai/todo/todo.html
+++ b/jsbasic/mungunshagai/todo/todo.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo List App 2022</title>
-
+    <script src="https://kit.fontawesome.com/9a12ec8366.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -29,21 +29,6 @@
             <h2>Жагсаалт</h2>
             <div id="tasks">
 
-
-              <div class="task">
-                <div class="content">
-                  <input
-                    type="text"
-                    class="text"
-                    value="Шинэ таскын текст"
-                    readonly
-                  />
-                </div>
-                <div class="actions">
-                  <button class="edit">Edit</button>
-                  <button class="delete">Delete</button>
-                </div>
-              </div>
 
 
             </div>
