--- a/jsbasic/orgil/sudoku/index.html
+++ b/jsbasic/orgil/sudoku/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <h3>Sudoku</h3>
+    <button type="button" id="test">Check number</button>
     <div id="root"></div>
+
+    
     <script src="./main.js"></script>
 </body>
 </html>
