--- a/jsbasic/newyear/qrLogin/index.html
+++ b/jsbasic/newyear/qrLogin/index.html
@@ -24,7 +24,7 @@
                   <div class="card-body p-md-5 mx-md-4">
                     <div class="text-center">
                       <img
-                        src="./img/lotus.webp"
+                        src="./img/undraw_picture_login.png"
                         style="width: 185px"
                         alt="logo"
                       />
