--- a/jsbasic/newyear/qrLogin/index.html
+++ b/jsbasic/newyear/qrLogin/index.html
@@ -14,7 +14,7 @@
     <title>Hack this site</title>
   </head>
   <body>
-    <section class="h-100 gradient-form" style="background-color: #eee">
+    <section class="h-100 gradient-form" >
       <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
           <div class="col-xl-10">
@@ -60,7 +60,7 @@
 
                       <div class="text-center pt-1 mb-5 pb-1">
                         <button
-                          class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3"
+                          class="btn btn-danger btn-block fa-lg gradient-custom-2 mb-3"
                           type="button" id="submitBtn"
                         >
                           Нэвтрэх
@@ -73,14 +73,11 @@
                   class="col-lg-6 d-flex align-items-center gradient-custom-2"
                 >
                   <div class="text-white px-3 py-4 p-md-5 mx-md-4">
-                    <h4 class="mb-4" id="messageUser">
+                    <h4 class="mb-4" id="messageTitle">
                       Вэб сайтын харагдах байдалтай холбоотой үгс
                     </h4>
-                    <p class="small mb-0">
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                      sed do eiusmod tempor incididunt ut labore et dolore magna
-                      aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                      ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    <p class="small mb-0" id="msgDescription">
+                      Hints? хэсгээс QR кодыг уншиж хэрэгтэй мэдээллээ олж аван нууц үгэнд хийж нэвтэрнэ үү.
                     </p>
                   </div>
                 </div>
@@ -91,7 +88,7 @@
       </div>
       <div class="container">
               <p id="hints">
-                <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target=".multi-collapse" aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2 multiCollapseExample3 multiCollapseExample4">Hints?</button>
+                <button class="btn btn-danger" type="button" data-bs-toggle="collapse" data-bs-target=".multi-collapse" aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2 multiCollapseExample3 multiCollapseExample4">Hints?</button>
               </p>
               <div class="row">
                 <div class="col">
