todo list complete

--- a/jsbasic/mungunshagai/todo/todo.html
+++ b/jsbasic/mungunshagai/todo/todo.html
@@ -13,7 +13,7 @@
       <div class="wrapper">
         <header>
           <h1>Todo List App 2022</h1>
-          <div id="DateNow">Он сар өдөр: 2022-12-19</div>
+          <div id="dateNow"><b>Он сар өдөр: <span id="getDateNow"></span></b><span id="taskListNo"></span></div>
           <form id="new-task-form">
             <input
               type="text"
@@ -28,9 +28,7 @@
           <section class="task-list">
             <h2>Жагсаалт</h2>
             <div id="tasks">
-
-
-
+              <!-- TASKs here END -->
             </div>
           </section>
         </main>
