fetch dog image display DOM

--- a/jsbasic/bilguun/randomUser/index.html
+++ b/jsbasic/bilguun/randomUser/index.html
@@ -13,7 +13,7 @@
             <div class="card">
                 <div class="card-header">
                     <div class="card-image">
-                        <img src="" alt="Profile image" id="proImage">
+                        <img src="https://randomuser.me/api/portraits/women/37.jpg" alt="Profile image" id="proImage">
                     </div>
                     <h3 id="name">Linda Williams</h3>
                     <p id="email">linda.w@webbs.com</p>
