--- a/jsbasic/orgil/wf_fetch_dog/index.html
+++ b/jsbasic/orgil/wf_fetch_dog/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>DoggoSelect</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css?family=Bree+Serif|Open+Sans:400,700"
+      href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&family=Ubuntu+Mono&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
