one user Profile API tataj uusgew

--- a/jsbasic/bilguun/randomUser/index.html
+++ b/jsbasic/bilguun/randomUser/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./src/style.css">
+    <script src="./src/myfontawesome.minified.js" crossorigin="anonymous"></script>
     <title>Random User Info</title>
 </head>
 <body>
@@ -12,18 +13,16 @@
         <div class="cards">
             <div class="card">
                 <div class="card-header">
-                    <div class="card-image">
-                        <img src="https://randomuser.me/api/portraits/women/37.jpg" alt="Profile image" id="proImage">
-                    </div>
+                    <div class="card_image"></div>
                     <h3 id="name">Linda Williams</h3>
                     <p id="email">linda.w@webbs.com</p>
                     <p id="phoneNumber">+1-555-245-2013</p>
                 </div>
                 <div class="card-body">
                     <ul>
-                        <li>Device Used - Mobile</li>
-                        <li>Location - San Francisco, USA</li>
-                        <li>Facebook Profile</li>
+                        <li><i id="mob" class="fa-solid fa-circle fa-2xs mr-6"></i> Device Used - <span id="devices"></span></li>
+                        <li><i id="loc" class="fa-solid fa-circle fa-2xs mr-6"></i> Location - <span id="location"></span></li>
+                        <li><i id="fb" class="fa-solid fa-circle fa-2xs mr-6"></i> Facebook Profile</li>
                     </ul>
                 </div>
                 <div class="footer-card">
@@ -32,6 +31,6 @@
             </div>
         </div>
     </div>
-    <script src="./main.js"></script>
+    <script src="./src/main.js"></script>
 </body>
 </html>
