--- a/jsbasic/orgil/cars/index.html
+++ b/jsbasic/orgil/cars/index.html
@@ -14,20 +14,61 @@
   </head>
   <body>
     <div class="container">
-      <form id="form" class="row g-3">
-        <div class="col-sm-6 my-3">
-          <button id="btn">Get Cars List</button>
-        </div>
-        <div class="col-sm-6 my-3">
-          <button
-            type="button"
-            class="btn btn-outline-primary"
-            data-bs-toggle="modal"
-            data-bs-target="#exampleModal"
-          >
-            New car add
-          </button>
-        </div>
+      <form id="form" class="row g-3 mt-3">
+        <ul class="nav justify-content-center">
+          <li class="nav-item">
+            <button type="button" id="btn" class="btn btn-outline-primary">
+              Get Cars List
+            </button>
+          </li>
+          <li class="nav-item">
+            <div class="btn-group">
+              <button
+                type="button"
+                class="btn btn-danger dropdown-toggle"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Cars by brand name
+              </button>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Toyota</a></li>
+                <li><a class="dropdown-item" href="#">Nissan</a></li>
+                <li><a class="dropdown-item" href="#">Porsche</a></li>
+              </ul>
+            </div>
+          </li>
+          <li class="nav-item">
+            <div class="btn-group">
+                <button
+                  type="button"
+                  class="btn btn-danger dropdown-toggle"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Cars by Model name
+                </button>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Prius</a></li>
+                  <li><a class="dropdown-item" href="#">Aqua</a></li>
+                  <li><a class="dropdown-item" href="#">Lexus RX</a></li>
+                  <li><a class="dropdown-item" href="#">Lexus HR</a></li>
+                  <li><a class="dropdown-item" href="#">Land Cruiser</a></li>
+                  <li><a class="dropdown-item" href="#">Cayenne</a></li>
+                </ul>
+              </div>
+          </li>
+          <li class="nav-item">
+            <button
+              type="button"
+              class="btn btn-outline-primary"
+              data-bs-toggle="modal"
+              data-bs-target="#exampleModal"
+            >
+              New car add
+            </button>
+          </li>
+        </ul>
 
         <!-- Modal -->
         <div
@@ -89,16 +130,20 @@
                 >
                   Close
                 </button>
-                <button type="submit" class="btn btn-outline-primary" id="saveBtn">
+                <button
+                  type="submit"
+                  class="btn btn-outline-primary"
+                  id="saveBtn"
+                >
                   Save car
                 </button>
               </div>
             </div>
           </div>
         </div>
+        <!-- Modal End -->
       </form>
       <div id="root">
-
         <!-- <div class="card" style="width: 18rem">
           <img src="..." class="card-img-top" alt="..." />
           <div class="card-body">
@@ -110,8 +155,6 @@
             <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
         </div> -->
-
-
       </div>
     </div>
     <script src="./main.js"></script>
