--- a/jsbasic/orgil/cars/index.html
+++ b/jsbasic/orgil/cars/index.html
@@ -13,51 +13,53 @@
     <title>Cars information</title>
   </head>
   <body>
-    <div class="container">
-      <form id="form" class="row g-3 mt-3">
-        <ul class="nav justify-content-center">
-          <li class="nav-item">
+    <div class="container-fluid">
+      <nav
+        class="navbar navbar-expand-md navbar-light d-flex justify-content-center"
+        style="background-color: #e3f2fd"
+      >
+        <ul class="navbar-nav mb-2 mb-lg-0">
+          <li class="nav-item me-5">
             <button type="button" id="btn" class="btn btn-outline-primary">
               Get Cars List
             </button>
           </li>
-          <li class="nav-item">
-            <div class="btn-group">
-              <button
-                type="button"
-                class="btn btn-danger dropdown-toggle"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Cars by brand name
-              </button>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Toyota</a></li>
-                <li><a class="dropdown-item" href="#">Nissan</a></li>
-                <li><a class="dropdown-item" href="#">Porsche</a></li>
-              </ul>
-            </div>
+          <li class="nav-item dropdown me-5">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdown"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              Cars by brand name
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#">Toyota</a></li>
+              <li><a class="dropdown-item" href="#">Nissan</a></li>
+              <li><a class="dropdown-item" href="#">Lexus</a></li>
+            </ul>
           </li>
-          <li class="nav-item">
-            <div class="btn-group">
-                <button
-                  type="button"
-                  class="btn btn-danger dropdown-toggle"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  Cars by Model name
-                </button>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Prius</a></li>
-                  <li><a class="dropdown-item" href="#">Aqua</a></li>
-                  <li><a class="dropdown-item" href="#">Lexus RX</a></li>
-                  <li><a class="dropdown-item" href="#">Lexus HR</a></li>
-                  <li><a class="dropdown-item" href="#">Land Cruiser</a></li>
-                  <li><a class="dropdown-item" href="#">Cayenne</a></li>
-                </ul>
-              </div>
+          <li class="nav-item dropdown me-5">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdown"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              Cars by model name
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#">Prius</a></li>
+              <li><a class="dropdown-item" href="#">Aqua</a></li>
+              <li><a class="dropdown-item" href="#">Lexus</a></li>
+              <li><a class="dropdown-item" href="#">Land Cruiser</a></li>
+            </ul>
           </li>
+  
           <li class="nav-item">
             <button
               type="button"
@@ -69,7 +71,12 @@
             </button>
           </li>
         </ul>
+      </nav>
 
+    </div>
+
+    <div class="container">
+      <form id="form" class="row g-3 mt-3">
         <!-- Modal -->
         <div
           class="modal fade"
@@ -82,7 +89,7 @@
             <div class="modal-content">
               <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">
-                  New car information enter
+                  Enter new car's information
                 </h5>
                 <button
                   type="button"
@@ -94,7 +101,7 @@
               <div class="modal-body">
                 <div class="row-auto">
                   <label for="model" class="col-sm-4 col-form-label"
-                    >Car model enter:
+                    >Car model name:
                   </label>
                   <div class="col-sm-8">
                     <input type="text" class="form-control" id="model" />
@@ -102,7 +109,7 @@
                 </div>
                 <div class="row-auto">
                   <label for="brand" class="col-sm-4 col-form-label"
-                    >Car name enter:
+                    >Car brand name:
                   </label>
                   <div class="col-sm-8">
                     <input type="text" class="form-control" id="brand" />
@@ -110,7 +117,7 @@
                 </div>
                 <div class="row-auto">
                   <label for="imageCar" class="col-sm-4 col-form-label"
-                    >Car image link enter:
+                    >Car image url:
                   </label>
                   <div class="col-sm-8">
                     <input type="text" class="form-control" id="imageCar" />
@@ -133,7 +140,7 @@
                 <button
                   type="submit"
                   class="btn btn-outline-primary"
-                  id="saveBtn"
+                  id="btnSave"
                 >
                   Save car
                 </button>
